--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=
+spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.jpa.properties.hibernate.dialate = org.hibernate.dialate.MySQL5InnoDBDialate
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialize=true
+spring.jpa.show-sql=true
+
